--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "multi-language-project",
-  "version": "1.0.0",
+  "version": "0.0.2",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "mongodb": "^2.2.10"
   }
 }
