Angular component based architecture

--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "multi-language-project",
   "version": "0.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@angular/router": "^0.2.0",
+    "angular": "^1.5.8",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongodb": "^2.2.10"
