--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "angular": "^1.5.8",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "mkdirp": "^0.5.1",
     "mongodb": "^2.2.10"
   }
 }
